--- a/shopDetails.html
+++ b/shopDetails.html
@@ -107,6 +107,7 @@
                     <li><a class="dropdown-item" href="compare.html">shop-4</a></li>
                     <li><a class="dropdown-item" href="shopCart.html">shop Cart-5</a></li>
                     <li><a class="dropdown-item" href="checkout.html">checkout-6</a></li>
+                    <li><a class="dropdown-item" href="wishlist.html">wishlist-7</a></li>
                 </ul>
               </li>
               <li class="nav-item dropdown">
