--- a/blog.html
+++ b/blog.html
@@ -124,11 +124,11 @@
                 <a class="nav-link" aria-current="page" href="#" data-bs-toggle="dropdown">Blogs<i class="fa-solid 
                    fa-chevron-down"></i></a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="blog.html">Blog-1</a></li>
-                  <li><a class="dropdown-item" href="#">Blog-2</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Blog-3</a></li>
-                  <li><a class="dropdown-item" href="#">Blog-4</a></li>
+                    <li><a class="dropdown-item" href="blog.html">Blog-1</a></li>
+                    <li><a class="dropdown-item" href="#">Blog-2</a></li>
+                    <li><hr class="dropdown-divider"></li>
+                    <li><a class="dropdown-item" href="#">Blog-3</a></li>
+                    <li><a class="dropdown-item" href="#">Blog-4</a></li>
                 </ul>
               </li>
               <li class="nav-item dropdown">
@@ -165,188 +165,164 @@
     </nav>
     <!-- Nav section end  -->
     <!-- Banner section start  -->
-    <section id="checkout_banner">
+    <section id="blog_banner">
         <div class="container h-100">
-            <div class="row h-100 justify-content-center align-items-center">
-                <div class="col-lg-2">
-                    <div class="checkout_banner_content text-center">
-                        <h3>Checkout</h3>
-                        <p> <span><a href="index.html">Home</a></span>  /  Checkout</p>
+           <div class="row h-100 justify-content-center align-items-center">
+             <div class="col-lg-3 blog_banner_content text-center">
+               <h2>Blog</h2>
+               <p><span><a href="index.html">Home</a></span>  /  Blog</p>
+           </div>
+           </div>
+        </div>
+     </section>
+    <!-- Banner section end  -->
+    <!-- Blog Box section start  -->
+    <section id="blog_box">
+        <div class="container">
+            <div class="row g-0">
+                <div class="col-lg-4 blog_box_item">
+                    <div class="card" style="width: 350px;">
+                        <div class="card_img">
+                            <img src="img/blog-s-3-1.png" class="card-img-top" alt="...">
+                            <a href="#">January 04, 2022</a>
+                        </div>
+                        <div class="card-body">
+                            <h4><a href="#">Color, Size, Material Swatches</a></h4>
+                          <p>Authoritatively innovate reliable users for team building intellectual capital. Assertively.</p>
+                          <a href="#" class="read_more">read more<i class="fa-solid fa-arrow-right"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 blog_box_item">
+                    <div class="card" style="width: 350px;">
+                        <div class="card_img">
+                            <img src="img/blog-s-3-2.png" class="card-img-top" alt="...">
+                            <a href="#">January 04, 2022</a>
+                        </div>
+                        <div class="card-body">
+                            <h4><a href="#">Fashion coats 2022: key trends</a></h4>
+                          <p>Progressively productize installed base testing procedures whereas resource.</p>
+                          <a href="#" class="read_more">read more<i class="fa-solid fa-arrow-right"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 blog_box_item">
+                    <div class="card" style="width: 350px;">
+                        <div class="card_img">
+                            <img src="img/blog-s-3-3.png" class="card-img-top" alt="...">
+                            <a href="#">January 04, 2022</a>
+                        </div>
+                        <div class="card-body">
+                            <h4><a href="#">Fashion Women Long Skat</a></h4>
+                          <p>Compellingly monetize customized channels with distributed manufactured products.</p>
+                          <a href="#" class="read_more">read more<i class="fa-solid fa-arrow-right"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 blog_box_item">
+                    <div class="card" style="width: 350px;">
+                        <div class="card_img">
+                            <img src="img/blog-s-3-4.png" class="card-img-top" alt="...">
+                            <a href="#">January 04, 2022</a>
+                        </div>
+                        <div class="card-body">
+                            <h4><a href="#">Minimal Design Inspiration</a></h4>
+                          <p>Authoritatively innovate reliable users for team building intellectual capital. Assertively.</p>
+                          <a href="#" class="read_more">read more<i class="fa-solid fa-arrow-right"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 blog_box_item">
+                    <div class="card" style="width: 350px;">
+                        <div class="card_img">
+                            <img src="img/blog-s-3-5.png" class="card-img-top" alt="...">
+                            <a href="#">January 04, 2022</a>
+                        </div>
+                        <div class="card-body">
+                            <h4><a href="#">Fashion T-shirt 2022: key trends</a></h4>
+                          <p>Progressively productize installed base testing procedures whereas resource.</p>
+                          <a href="#" class="read_more">read more<i class="fa-solid fa-arrow-right"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 blog_box_item">
+                    <div class="card" style="width: 350px;">
+                        <div class="card_img">
+                            <img src="img/blog-s-3-6.png" class="card-img-top" alt="...">
+                            <a href="#">January 04, 2022</a>
+                        </div>
+                        <div class="card-body">
+                            <h4><a href="#">Women Stylish Bag & Shose</a></h4>
+                          <p>Compellingly monetize customized channels with distributed manufactured products.</p>
+                          <a href="#" class="read_more">read more<i class="fa-solid fa-arrow-right"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 blog_box_item">
+                    <div class="card" style="width: 350px;">
+                        <div class="card_img">
+                            <img src="img/blog-s-3-7.png" class="card-img-top" alt="...">
+                            <a href="#">January 04, 2022</a>
+                        </div>
+                        <div class="card-body">
+                            <h4><a href="#">Women Fashionable Coats 2022</a></h4>
+                          <p>Authoritatively innovate reliable users for team building intellectual capital. Assertively.</p>
+                          <a href="#" class="read_more">read more<i class="fa-solid fa-arrow-right"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 blog_box_item">
+                    <div class="card" style="width: 350px;">
+                        <div class="card_img">
+                            <img src="img/blog-s-3-8.png" class="card-img-top" alt="...">
+                            <a href="#">January 04, 2022</a>
+                        </div>
+                        <div class="card-body">
+                            <h4><a href="#">Fashion Women New key trends</a></h4>
+                          <p>Progressively productize installed base testing procedures whereas resource.</p>
+                          <a href="#" class="read_more">read more<i class="fa-solid fa-arrow-right"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 blog_box_item">
+                    <div class="card" style="width: 350px;">
+                        <div class="card_img">
+                            <img src="img/blog-s-3-9.png" class="card-img-top" alt="...">
+                            <a href="#">January 04, 2022</a>
+                        </div>
+                        <div class="card-body">
+                            <h4><a href="#">New Trends Hudi Sweater </a></h4>
+                          <p>Compellingly monetize customized channels with distributed manufactured products.</p>
+                          <a href="#" class="read_more">read more<i class="fa-solid fa-arrow-right"></i></a>
+                        </div>
                     </div>
                 </div>
             </div>
+
+            <div class="row justify-content-between">
+               <div class="col-lg-2">
+                  <div class="blog_post_showing">
+                     <p>Showing 9 of 16 Post</p>
+                  </div>
+               </div>
+               <div class="col-lg-4">
+                  <div class="blog_post_btn">
+                  <nav aria-label="Page navigation example">
+                    <ul class="pagination">
+                      <li class="page-item"><a class="page-link" href="#"><i class="fa-solid fa-arrow-left-long"></i>Pre</a></li>
+                      <li class="page-item"><a class="page-link" href="#">1</a></li>
+                      <li class="page-item"><a class="page-link" href="#">2</a></li>
+                      <li class="page-item"><a class="page-link" href="#">3</a></li>
+                      <li class="page-item"><a class="page-link" href="#">Next<i class="fa-solid fa-arrow-right-long"></i></a></li>
+                    </ul>
+                  </nav>
+                  </div>
+               </div>
+            </div>
         </div>
     </section>
-    <!-- Banner section end  -->
-    <!-- CheckOut Billing Information section start  -->
-    <section id="checkout_info">
-       <div class="container">
-         <div class="row">
-            <div class="col-lg-12">
-              <div class="checkout_coupon d-flex">
-                <img src="img/exclamation.png" alt="">
-                <p>Have a coupon?</p>
-                <a href="#">Click here to enter your code</a>
-              </div>
-            </div>
-         </div>
-         <div class="row">
-            <div class="col-lg-6">
-               <div class="checkout_info_billing_input">
-                  <h4>Billing Information</h4>
-                  <form action="" class="">
-                     <div class="input_name d-flex justify-content-between ">
-                       <div>
-                        <h5>First Name*</h5>
-                        <input type="text" placeholder="Your first name...">
-                       </div>
-                       <div>
-                        <h5>Last Name*</h5>
-                        <input type="text" placeholder="Your last name...">
-                       </div>
-                     </div>
-                     <div class="input_company">
-                       <h5>Company name (optional)*</h5>
-                       <input type="text" placeholder="Name">
-                     </div>
-                     <div class="input_company">
-                       <h5>Email*</h5>
-                       <input type="email" placeholder="Email" required>
-                     </div>
-                     <div class="input_company">
-                       <h5>telephone*</h5>
-                       <input type="phone" placeholder="+880" required>
-                     </div>
-                     <div class="input_company">
-                       <h5>country*</h5>
-                       <select class="form-select" aria-label="Default select example">
-                        <option selected>Select...</option>
-                        <option value="1">Bangladesh</option>
-                        <option value="2">India</option>
-                        <option value="3">Pakistan</option>
-                       </select>
-                     </div>
-                     <div class="input_company">
-                       <h5>Street address*</h5>
-                       <input type="name" placeholder="House and street name...">
-                       <input type="name" placeholder="Apartment, suite, unit, etc. (optional)">
-                     </div>
-                     <div class="input_company">
-                       <h5>Town / City*</h5>
-                       <select class="form-select" aria-label="Default select example">
-                        <option selected>Select...</option>
-                        <option value="1">Chittagong</option>
-                        <option value="2">Dhaka</option>
-                        <option value="3">Sylet</option>
-                       </select>
-                     </div>
-                     <div class="input_company">
-                       <h5>Post Code*</h5>
-                       <input type="number" placeholder="Code...">
-                     </div>
-                  </form>
-               </div>
-            </div>
-            <div class="col-lg-6">
-               <div class="checkout_info_additional_input">
-                  <h4>Additional Information</h4>
-                  <form action="">
-                    <h5>Order notes (optional)*</h5>
-                    <textarea placeholder="Notes about your order, e.g. special notes for delivery."></textarea>
-                  </form>
-               </div>
-            </div>
-         </div>
-         <div class="row">
-           <div class="col-lg-12">
-              <div class="checkout_info_your_order">
-                 <h5>Your Order</h5>
-                 <table class="checkout_info_your_order_table">
-                    <tbody>
-                       <tr class="tr_heading">
-                          <th> <h6>Image</h6> </th>
-                          <th> <h6>Product Name</h6> </th>
-                          <th> <h6>Price/Unit</h6> </th>
-                          <th> <h6>Quantity</h6> </th>
-                          <th> <h6>Total</h6> </th>
-                       </tr>
-                       <tr class="tr_order_item">
-                         <td>
-                            <a href="#"><img src="img/cart-img-1-1.jpg" alt=""></a>
-                         </td>
-                         <td>
-                            <a href="#" class="order_para"><p>Jacket Hoodie Sweater</p></a>
-                         </td>
-                         <td><a href="#">$130.00</a></td>
-                         <td>
-                          <div class="quantity d-flex flex-wrap justify-content-center">
-                             <button><i class="fa-solid fa-minus"></i></button>
-                             <input type="number" value="1" min="1" max="99">
-                             <button><i class="fa-solid fa-plus"></i></button>
-                          </div>
-                       </td>
-                       <td>$130.00</td>
-                       </tr>
-                    </tbody>
-                 </table>
-                 <div class="pricing d-flex">
-                    <div class="pricing_hr">
-                      <h6>Subtotal</h6>
-                    </div>
-                    <div class="price">
-                       <span>$130.00</span>
-                    </div>
-                 </div>
-                 <div class="pricing d-flex">
-                    <div class="pricing_hr">
-                      <h6>Total</h6>
-                    </div>
-                    <div class="price">
-                       <span>$130.00</span>
-                    </div>
-                 </div>
-              </div>
-           </div>
-         </div>
-         <div class="row">
-           <div class="col-lg-12">
-              <div class="checkout_info_checkbox">
-                 <div class="checkout_info_checkbox_item">
-                    <div class="checkbox_input d-flex">
-                      <input type="checkbox" class="checkbox_jq">
-                      <h5>Direct bank transfer</h5>
-                    </div>
-                    <div class="checkbox_para">
-                       <p>Make your payment directly into our bank account. Please use your Order ID as the payment reference. Your order will not be shipped until the funds have cleared in our
-                        account.</p>
-                    </div>
-                 </div>
-                 <div class="checkout_info_checkbox_item">
-                    <div class="checkbox_input d-flex">
-                      <input type="checkbox" name="checkbox" id="#">
-                      <h5>Check payments</h5>
-                    </div>
-                    <div class="checkbox_para">
-                       <p>Please send a check to Store Name, Store Street, Store Town, Store State / County, Store Postcode.</p>
-                    </div>
-                 </div>
-                 <div class="checkout_info_checkbox_item">
-                    <div class="checkbox_input d-flex">
-                      <input type="checkbox" name="checkbox" id="#">
-                      <h5>Cash on delivery</h5>
-                    </div>
-                    <div class="checkbox_para">
-                       <p>Pay with cash upon delivery.</p>
-                    </div>
-                 </div>
-                 <p>Your personal data will be used to process your order, support your experience throughout this website, and for other purposes described in our <span>privacy policy.</span></p>
-                 <button type="submit">Place Order</button>
-              </div>
-           </div>
-         </div>
-       </div>
-    </section>
-    <!-- CheckOut Billing Information section end  -->
+    <!-- Blog Box section end  -->
+
 
 
 <!-- Footer section start  -->
