--- a/index.html
+++ b/index.html
@@ -76,10 +76,11 @@
                 <a class="nav-link" aria-current="page" href="#" data-bs-toggle="dropdown">Blogs<i class="fa-solid 
                    fa-chevron-down"></i></a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <li><a class="dropdown-item" href="#">shop-1</a></li>
-                    <li><a class="dropdown-item" href="#">shop-2</a></li>
-                    <li><hr class="dropdown-divider"></li>
-                    <li><a class="dropdown-item" href="#">shop-3</a></li>
+                  <li><a class="dropdown-item" href="blog.html">Blog-1</a></li>
+                  <li><a class="dropdown-item" href="#">Blog-2</a></li>
+                  <li><hr class="dropdown-divider"></li>
+                  <li><a class="dropdown-item" href="#">Blog-3</a></li>
+                  <li><a class="dropdown-item" href="#">Blog-4</a></li>
                 </ul>
               </li>
               <li class="nav-item dropdown">
