--- a/blogclassic.html
+++ b/blogclassic.html
@@ -127,7 +127,7 @@
                     <li><a class="dropdown-item" href="blog.html">Blog-1</a></li>
                     <li><a class="dropdown-item" href="blogclassic.html">Blog-2</a></li>
                     <li><hr class="dropdown-divider"></li>
-                    <li><a class="dropdown-item" href="#">Blog-3</a></li>
+                    <li><a class="dropdown-item" href="blogsidebar.html">Blog-3</a></li>
                     <li><a class="dropdown-item" href="#">Blog-4</a></li>
                 </ul>
               </li>
@@ -168,164 +168,150 @@
     <section id="blog_banner">
         <div class="container h-100">
            <div class="row h-100 justify-content-center align-items-center">
-             <div class="col-lg-3 blog_banner_content text-center">
-               <h2>Blog</h2>
-               <p><span><a href="index.html">Home</a></span>  /  Blog</p>
+             <div class="col-lg-4 blog_banner_content text-center">
+               <h2>Blog - Classic</h2>
+               <p><span><a href="index.html">Home</a></span>  /  Blog - Classic</p>
            </div>
            </div>
         </div>
      </section>
     <!-- Banner section end  -->
-    <!-- Blog Box section start  -->
-    <section id="blog_box">
-        <div class="container">
-            <div class="row g-0">
-                <div class="col-lg-4 blog_box_item">
-                    <div class="card" style="width: 350px;">
-                        <div class="card_img">
-                            <img src="img/blog-s-3-1.png" class="card-img-top" alt="...">
-                            <a href="#">January 04, 2022</a>
-                        </div>
-                        <div class="card-body">
-                            <h4><a href="#">Color, Size, Material Swatches</a></h4>
-                          <p>Authoritatively innovate reliable users for team building intellectual capital. Assertively.</p>
-                          <a href="#" class="read_more">read more<i class="fa-solid fa-arrow-right"></i></a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 blog_box_item">
-                    <div class="card" style="width: 350px;">
-                        <div class="card_img">
-                            <img src="img/blog-s-3-2.png" class="card-img-top" alt="...">
-                            <a href="#">January 04, 2022</a>
-                        </div>
-                        <div class="card-body">
-                            <h4><a href="#">Fashion coats 2022: key trends</a></h4>
-                          <p>Progressively productize installed base testing procedures whereas resource.</p>
-                          <a href="#" class="read_more">read more<i class="fa-solid fa-arrow-right"></i></a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 blog_box_item">
-                    <div class="card" style="width: 350px;">
-                        <div class="card_img">
-                            <img src="img/blog-s-3-3.png" class="card-img-top" alt="...">
-                            <a href="#">January 04, 2022</a>
-                        </div>
-                        <div class="card-body">
-                            <h4><a href="#">Fashion Women Long Skat</a></h4>
-                          <p>Compellingly monetize customized channels with distributed manufactured products.</p>
-                          <a href="#" class="read_more">read more<i class="fa-solid fa-arrow-right"></i></a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 blog_box_item">
-                    <div class="card" style="width: 350px;">
-                        <div class="card_img">
-                            <img src="img/blog-s-3-4.png" class="card-img-top" alt="...">
-                            <a href="#">January 04, 2022</a>
-                        </div>
-                        <div class="card-body">
-                            <h4><a href="#">Minimal Design Inspiration</a></h4>
-                          <p>Authoritatively innovate reliable users for team building intellectual capital. Assertively.</p>
-                          <a href="#" class="read_more">read more<i class="fa-solid fa-arrow-right"></i></a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 blog_box_item">
-                    <div class="card" style="width: 350px;">
-                        <div class="card_img">
-                            <img src="img/blog-s-3-5.png" class="card-img-top" alt="...">
-                            <a href="#">January 04, 2022</a>
-                        </div>
-                        <div class="card-body">
-                            <h4><a href="#">Fashion T-shirt 2022: key trends</a></h4>
-                          <p>Progressively productize installed base testing procedures whereas resource.</p>
-                          <a href="#" class="read_more">read more<i class="fa-solid fa-arrow-right"></i></a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 blog_box_item">
-                    <div class="card" style="width: 350px;">
-                        <div class="card_img">
-                            <img src="img/blog-s-3-6.png" class="card-img-top" alt="...">
-                            <a href="#">January 04, 2022</a>
-                        </div>
-                        <div class="card-body">
-                            <h4><a href="#">Women Stylish Bag & Shose</a></h4>
-                          <p>Compellingly monetize customized channels with distributed manufactured products.</p>
-                          <a href="#" class="read_more">read more<i class="fa-solid fa-arrow-right"></i></a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 blog_box_item">
-                    <div class="card" style="width: 350px;">
-                        <div class="card_img">
-                            <img src="img/blog-s-3-7.png" class="card-img-top" alt="...">
-                            <a href="#">January 04, 2022</a>
-                        </div>
-                        <div class="card-body">
-                            <h4><a href="#">Women Fashionable Coats 2022</a></h4>
-                          <p>Authoritatively innovate reliable users for team building intellectual capital. Assertively.</p>
-                          <a href="#" class="read_more">read more<i class="fa-solid fa-arrow-right"></i></a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 blog_box_item">
-                    <div class="card" style="width: 350px;">
-                        <div class="card_img">
-                            <img src="img/blog-s-3-8.png" class="card-img-top" alt="...">
-                            <a href="#">January 04, 2022</a>
-                        </div>
-                        <div class="card-body">
-                            <h4><a href="#">Fashion Women New key trends</a></h4>
-                          <p>Progressively productize installed base testing procedures whereas resource.</p>
-                          <a href="#" class="read_more">read more<i class="fa-solid fa-arrow-right"></i></a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 blog_box_item">
-                    <div class="card" style="width: 350px;">
-                        <div class="card_img">
-                            <img src="img/blog-s-3-9.png" class="card-img-top" alt="...">
-                            <a href="#">January 04, 2022</a>
-                        </div>
-                        <div class="card-body">
-                            <h4><a href="#">New Trends Hudi Sweater </a></h4>
-                          <p>Compellingly monetize customized channels with distributed manufactured products.</p>
-                          <a href="#" class="read_more">read more<i class="fa-solid fa-arrow-right"></i></a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="row justify-content-between">
-               <div class="col-lg-2">
-                  <div class="blog_post_showing">
-                     <p>Showing 9 of 16 Post</p>
+    <!-- Blog Classic Box section start  -->
+    <section id="blog_classic_box">
+       <div class="container">
+          <div class="row">
+              <div class="col-lg-12 blog_classic_box_item">
+                <div class="blog_classic_box_img_slider">
+                  <div class="blog_classic_box_img_slider_item">
+                    <a href="#"><img src="img/blog-s-2-1.jpg" alt="" class=" img-fluid"></a>
                   </div>
+                  <div class="blog_classic_box_img_slider_item">
+                    <a href="#"><img src="img/blog-s-2-3.jpg" alt="" class=" img-fluid"></a>
+                  </div>
+                  <div class="blog_classic_box_img_slider_item">
+                    <a href="#"><img src="img/blog-s-2-7.png" alt="" class=" img-fluid"></a>
+                  </div>
+                </div>
+                <div class="blog_classic_box_item_body shadow-sm">
+                   <div class="blog_body_meta">
+                      <a href="#"><i class="fa-regular fa-user"></i>Michel-Fashion Admin</a>
+                      <a href="#"><i class="fa-solid fa-calendar-days"></i>January 04, 2022</a>
+                   </div>
+                   <div class="blog_title">
+                       <h4><a href="#">Color, Size, Material Swatches</a></h4>
+                   </div>
+                   <p>Compellingly extend client-based catalysts for change with adaptive information. Appropriately repurpose inexpensive networks vis-a-vis turnkey customer service. Distinctively drive viral catalysts for change whereas high-payoff supply chains. Progressively myocardinate highly efficient meta-services via cutting-edge core competencies. Dynamically target mission.</p>
+                   <a href="#" class="read_btn">read more<i class="fa-solid fa-arrow-right"></i></a>
+                </div>
+              </div>
+              <div class="col-lg-12 blog_classic_box_item">
+                 <div class="box_img">
+                     <a href="#"><img src="img/blog-s-2-2.jpg" alt="" class=" img-fluid"></a>
+                 </div>
+                 <div class="blog_classic_box_item_body shadow-sm">
+                  <div class="blog_body_meta">
+                     <a href="#"><i class="fa-regular fa-user"></i>Michel-Fashion Admin</a>
+                     <a href="#"><i class="fa-solid fa-calendar-days"></i>January 04, 2022</a>
+                  </div>
+                  <div class="blog_title">
+                      <h4><a href="#">Fashion coats 2022: key trends</a></h4>
+                  </div>
+                  <p>Seamlessly cultivate low-risk high-yield processes whereas effective platforms. Professionally restore mission-critical process improvements after error-free results. Interactiv- ely monetize intermandated experiences through equity invested customer service. Dramatically engage user friendly paradigms via fully tested collaboration and idea-sharing. Energistically pursue wireless quality vectors without end-to-end strategic theme areas.</p>
+                  <a href="#" class="read_btn">read more<i class="fa-solid fa-arrow-right"></i></a>
                </div>
-               <div class="col-lg-4">
-                  <div class="blog_post_btn">
-                  <nav aria-label="Page navigation example">
-                    <ul class="pagination">
-                      <li class="page-item"><a class="page-link" href="#"><i class="fa-solid fa-arrow-left-long"></i>Pre</a></li>
-                      <li class="page-item"><a class="page-link" href="#">1</a></li>
-                      <li class="page-item"><a class="page-link" href="#">2</a></li>
-                      <li class="page-item"><a class="page-link" href="#">3</a></li>
-                      <li class="page-item"><a class="page-link" href="#">Next<i class="fa-solid fa-arrow-right-long"></i></a></li>
-                    </ul>
-                  </nav>
+              </div>
+              <div class="col-lg-12 blog_classic_box_item">
+                 <div class="box_img">
+                     <a href="#"><img src="img/blog-s-2-3.jpg" alt="" class=" img-fluid"></a>
+                 </div>
+                 <div class="blog_classic_box_item_body shadow-sm">
+                  <div class="blog_body_meta">
+                     <a href="#"><i class="fa-regular fa-user"></i>Michel-Fashion Admin</a>
+                     <a href="#"><i class="fa-solid fa-calendar-days"></i>January 04, 2022</a>
                   </div>
+                  <div class="blog_title">
+                      <h4><a href="#">Minimal Design Inspiration</a></h4>
+                  </div>
+                  <p>Uniquely productize cross-unit content via world-class methodologies. Dynamically productivate resource maximizing potentialities and collaborative networks. Continually str- ategize 24/365 total linkage and bricks-and-clicks data. Intrinsicly engineer long-term high-impact communities and corporate solutions. Compellingly disseminate unique benefits via installed base markets.</p>
+                  <a href="#" class="read_btn">read more<i class="fa-solid fa-arrow-right"></i></a>
+               </div>
+              </div>
+              <div class="col-lg-12 blog_classic_box_item">
+                 <div class="box_img">
+                     <a href="#"><img src="img/blog-s-2-6.png" alt="" class=" img-fluid"></a>
+                     <a href="https://youtu.be/i6YLjulNG_E" class="play_btn my-video-links venobox" data-autoplay="true" data-vbtype="video" data-maxwidth="600px"><i class="fa-solid fa-play"></i></a>
+                 </div>
+                 <div class="blog_classic_box_item_body shadow-sm">
+                  <div class="blog_body_meta">
+                     <a href="#"><i class="fa-regular fa-user"></i>Michel-Fashion Admin</a>
+                     <a href="#"><i class="fa-solid fa-calendar-days"></i>January 04, 2022</a>
+                  </div>
+                  <div class="blog_title">
+                      <h4><a href="#">Fashion T-shirt 2022: key trends</a></h4>
+                  </div>
+                  <p>Quickly expedite cross-platform supply chains with high standards in platforms. Appropriately deliver 24/7 internal "organic" sou rces through cooperative leadership. Complet- ely aggregate high-quality vortals and superior ideas. Synergistically reconceptuali  flexible infrastructures without quality e-markets. Holisticly redefine leveraged customer service vis-a-vis.</p>
+                  <a href="#" class="read_btn">read more<i class="fa-solid fa-arrow-right"></i></a>
+               </div>
+              </div>
+              <div class="col-lg-12 blog_classic_box_item">
+                 <div class="box_img">
+                     <a href="#"><img src="img/blog-s-2-7.png" alt="" class=" img-fluid"></a>
+                 </div>
+                 <div class="blog_classic_box_item_body shadow-sm">
+                  <div class="blog_body_meta">
+                     <a href="#"><i class="fa-regular fa-user"></i>Michel-Fashion Admin</a>
+                     <a href="#"><i class="fa-solid fa-calendar-days"></i>January 04, 2022</a>
+                  </div>
+                  <div class="blog_title">
+                      <h4><a href="#">Women Fashionable Coats 2022</a></h4>
+                  </div>
+                  <p>Collaboratively visualize client - based ROI than professional experiences. Credibly benchmark wireless functionalities through adaptive intellectual capital. Conveniently parall el task team building resources with global total linkage. Quickly morph leading-edge e-commerce via top-line core competencies. Energistically leverage existing economically sound relationships.</p>
+                  <a href="#" class="read_btn">read more<i class="fa-solid fa-arrow-right"></i></a>
+               </div>
+              </div>
+              <div class="col-lg-12 blog_classic_box_item">
+                 <div class="box_img">
+                    <a href="#"><img src="img/blog-7.jpg" alt="" class=" img-fluid w-100" style="height: 500px;"></a>
+                 </div>
+                 <div class="blog_classic_box_item_body shadow-sm">
+                  <div class="blog_body_meta">
+                     <a href="#"><i class="fa-regular fa-user"></i>Michel-Fashion Admin</a>
+                     <a href="#"><i class="fa-solid fa-calendar-days"></i>January 04, 2022</a>
+                  </div>
+                  <div class="blog_title">
+                      <h4><a href="#">Fashion Women New key trends</a></h4>
+                  </div>
+                  <p>Authoritatively integrate client-centered architectures whereas transparent e-markets. Credibly provide access to 24/7 niches rather than virtual collaboration and idea-sharing. Holisticly pursue front-end platforms rather than stand-alone communities. Efficiently maximize seamless systems whereas highly efficient vortals. Interactively pontificate bricks-and-clicks systems for collaborative models.
+                  </p>
+                  <a href="#" class="read_btn">read more<i class="fa-solid fa-arrow-right"></i></a>
+               </div>
+              </div>
+          </div>
+          <div class="row justify-content-between">
+            <div class="col-lg-2">
+               <div class="blog_classic_post_showing">
+                  <p>Showing 9 of 16 Post</p>
                </div>
             </div>
-        </div>
+            <div class="col-lg-4">
+               <div class="blog_classic_post_btn">
+               <nav aria-label="Page navigation example">
+                 <ul class="pagination">
+                   <li class="page-item"><a class="page-link" href="#"><i class="fa-solid fa-arrow-left-long"></i>Pre</a></li>
+                   <li class="page-item"><a class="page-link" href="#">1</a></li>
+                   <li class="page-item"><a class="page-link" href="#">2</a></li>
+                   <li class="page-item"><a class="page-link" href="#">Next<i class="fa-solid fa-arrow-right-long"></i></a></li>
+                 </ul>
+               </nav>
+               </div>
+            </div>
+         </div>
+       </div>
     </section>
-    <!-- Blog Box section end  -->
+    <!-- Blog Classic Box section end  -->
 
 
-
-<!-- Footer section start  -->
+    <!-- Footer section start  -->
 <footer id="about_footer">
     <div class="container">
        <div class="row">
