--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
                    fa-chevron-down"></i></a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                   <li><a class="dropdown-item" href="blog.html">Blog-1</a></li>
-                  <li><a class="dropdown-item" href="#">Blog-2</a></li>
+                  <li><a class="dropdown-item" href="blogclassic.html">Blog-2</a></li>
                   <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Blog-3</a></li>
+                  <li><a class="dropdown-item" href="blogsidebar.html">Blog-3</a></li>
                   <li><a class="dropdown-item" href="#">Blog-4</a></li>
                 </ul>
               </li>
