--- a/blogsidebar.html
+++ b/blogsidebar.html
@@ -128,7 +128,7 @@
                     <li><a class="dropdown-item" href="blogclassic.html">Blog-2</a></li>
                     <li><hr class="dropdown-divider"></li>
                     <li><a class="dropdown-item" href="blogsidebar.html">Blog-3</a></li>
-                    <li><a class="dropdown-item" href="#">Blog-4</a></li>
+                    <li><a class="dropdown-item" href="blogDetails.html">Blog-4</a></li>
                 </ul>
               </li>
               <li class="nav-item dropdown">
@@ -183,13 +183,13 @@
                 <div class="blog_classic_box_item">
                   <div class="blog_classic_box_img_slider">
                     <div class="blog_classic_box_img_slider_item">
-                      <a href="#"><img src="img/blog-s-2-1.jpg" alt="" class=" img-fluid"></a>
+                      <a href="blogDetails.html"><img src="img/blog-s-2-1.jpg" alt="" class=" img-fluid"></a>
                     </div>
                     <div class="blog_classic_box_img_slider_item">
-                      <a href="#"><img src="img/blog-s-2-3.jpg" alt="" class=" img-fluid"></a>
+                      <a href="blogDetails.html"><img src="img/blog-s-2-3.jpg" alt="" class=" img-fluid"></a>
                     </div>
                     <div class="blog_classic_box_img_slider_item">
-                      <a href="#"><img src="img/blog-s-2-7.png" alt="" class=" img-fluid"></a>
+                      <a href="blogDetails.html"><img src="img/blog-s-2-7.png" alt="" class=" img-fluid"></a>
                     </div>
                   </div>
                   <div class="blog_classic_box_item_body shadow-sm">
@@ -206,7 +206,7 @@
                 </div>
                 <div class="blog_classic_box_item">
                    <div class="box_img">
-                       <a href="#"><img src="img/blog-s-2-2.jpg" alt="" class=" img-fluid"></a>
+                       <a href="blogDetails.html"><img src="img/blog-s-2-2.jpg" alt="" class=" img-fluid"></a>
                    </div>
                    <div class="blog_classic_box_item_body shadow-sm">
                     <div class="blog_body_meta">
@@ -222,7 +222,7 @@
                 </div>
                 <div class="blog_classic_box_item">
                    <div class="box_img">
-                       <a href="#"><img src="img/blog-s-2-3.jpg" alt="" class=" img-fluid"></a>
+                       <a href="blogDetails.html"><img src="img/blog-s-2-3.jpg" alt="" class=" img-fluid"></a>
                    </div>
                    <div class="blog_classic_box_item_body shadow-sm">
                     <div class="blog_body_meta">
@@ -238,7 +238,7 @@
                 </div>
                 <div class="blog_classic_box_item">
                    <div class="box_img">
-                       <a href="#"><img src="img/blog-s-2-6.png" alt="" class=" img-fluid"></a>
+                       <a href="blogDetails.html"><img src="img/blog-s-2-6.png" alt="" class=" img-fluid"></a>
                        <a href="https://youtu.be/i6YLjulNG_E" class="play_btn my-video-links venobox" data-autoplay="true" data-vbtype="video" data-maxwidth="600px"><i class="fa-solid fa-play"></i></a>
                    </div>
                    <div class="blog_classic_box_item_body shadow-sm">
@@ -255,7 +255,7 @@
                 </div>
                 <div class="blog_classic_box_item">
                    <div class="box_img">
-                       <a href="#"><img src="img/blog-s-2-7.png" alt="" class=" img-fluid"></a>
+                       <a href="blogDetails.html"><img src="img/blog-s-2-7.png" alt="" class=" img-fluid"></a>
                    </div>
                    <div class="blog_classic_box_item_body shadow-sm">
                     <div class="blog_body_meta">
@@ -271,7 +271,7 @@
                 </div>
                 <div class="blog_classic_box_item">
                    <div class="box_img">
-                      <a href="#"><img src="img/blog-7.jpg" alt="" class=" img-fluid w-100" style="height: 500px;"></a>
+                      <a href="blogDetails.html"><img src="img/blog-7.jpg" alt="" class=" img-fluid w-100" style="height: 500px;"></a>
                    </div>
                    <div class="blog_classic_box_item_body shadow-sm">
                     <div class="blog_body_meta">
