--- a/shopCart.html
+++ b/shopCart.html
@@ -128,7 +128,7 @@
                   <li><a class="dropdown-item" href="blogclassic.html">Blog-2</a></li>
                   <li><hr class="dropdown-divider"></li>
                   <li><a class="dropdown-item" href="blogsidebar.html">Blog-3</a></li>
-                  <li><a class="dropdown-item" href="#">Blog-4</a></li>
+                  <li><a class="dropdown-item" href="blogDetails.html">Blog-4</a></li>
                 </ul>
               </li>
               <li class="nav-item dropdown">
